moiming/dev/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moim-dbserver-dev
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: moim-dbserver
    phase: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moim-dbserver
      phase: dev
  template:
    metadata:
      labels:
        app: moim-dbserver
        phase: dev
    spec:
      containers:
        - name: mysql
          image: mysql:8.0.33
          args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: moim-db-dev
spec:
  selector:
    app: moim-dbserver
    phase: dev
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moim-db-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moim-dbcli
      phase: dev
  template:
    metadata:
      name: moim-dbcli
      labels:
        app: moim-dbcli
        phase: dev
    spec:
      containers:
        - name: moim-dbcli
          image: 0612sha/ubuntu-mysql-cli:arm64
          command: ["sleep", "999d"]
