moiming/dev/moiming.yaml
apiVersion: v1
kind: Service
metadata:
  name: moim-app-dev
spec:
  selector:
    app: moim
    phase: dev
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moim-app-dev
  labels:
    app: moim
    phase: dev
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moim
      phase: dev
  template:
    metadata:
      labels:
        app: moim
        phase: dev
    spec:
      imagePullSecrets:
        - name: docker-secret
      containers:
        - name: moim
          imagePullPolicy: Always
          image: 0612sha/moim:arm64.v9
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: moim-cm-dev
              mountPath: config
              readOnly: true
          args:
            - -Dspring.config.location=/config/application.yaml
      volumes:
        - name: moim-cm-dev
          configMap:
            name: moim-app-dev
            items:
              - key: application.yaml
                path: application.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moim-app-dev
spec:
  ingressClassName: nginx
  rules:
    - host: moim.k8s-sha.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moim-app-dev
                port:
                  number: 80
